# depthai-core-example

./: CMakeLists.txt  Dockerfile  Dockerfile.runtime  README.md
src/: main.cpp
